# deepopg-off-the-shelf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  main.py  pyproject.toml  run.example.sh  run.sh  visualize.py  ~
app/: __init__.py  data.py  datasets.py  logging.py  masks.py  patch.py  schemas.py  tasks.py  types.py  utils.py
app/coco/: __init__.py  datasets.py  schemas.py
app/coco_annotator/: __init__.py  clients.py  schemas.py
app/datasets/: __init__.py  base.py
app/finding_summary/: __init__.py  datasets.py  schemas.py
app/instance_detection/: __init__.py  datasets.py  schemas.py  types.py
app/lib/: psg.py
app/semantic_segmentation/: __init__.py  datasets.py  schemas.py  utils.py
app/stats/: __init__.py  metrics.py  utils.py
configs/: config-maskdino-r50.yaml  config.yaml  deeplab-v3.yaml  insdet-v2-yolov8.yaml  mask_rcnn_mvitv2_t_3x.py  panoptic-fpn-2.yaml  yolov8m-seg.yaml  yolov8n-seg.yaml  yolov8s-seg.yaml
eval/: ROC.ipynb  golden.py  implant.ipynb  implant.py
scripts/: ROC.ipynb  commands.py  compare.py  compile-stats.py  convert-coco-to-detectron2-sem-seg.py  convert-coco-to-detectron2-semseg.py  convert-coco-to-instance-detection.py  convert-coco-to-yolo.py  convert-ntuh-12-coco.py  convert-ntuh-coco-golden-label.py  convert-ntuh-coco.py  convert-ntuh-finding-golden-label.py  convert-ntuh-finding-human-label.py  convert-ntuh-finding.py  convert-promaton-to-coco.py  convert-yolo-labels-to-detectron2-prediction-pt.py  count_implant.py  dentist_review.py  evaluate-auroc-combine.py  evaluate-auroc.py  evaluate-auroc_inset.py  evaluate-pvalue.py  evaluation.py  main.py  main_yolo.py  ntuh_gloden.csv  plot-agreements.py  plot-performances.py  postprocess.py  review.py  review_cate.py  show.py  test.py  visualize-coco.py  visualize-semseg.py  visualize.py
